--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Project Pluto Android</string>
     <string name="action_settings">Settings</string>
+    <string name="service_exit_error">Bluetooth service quit unexpectedly. Try restarting the application</string>
 </resources>
